istio/gateway.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: colors
  namespace: foobar
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - colors.demo4591.codefresh.io
    port:
      name: http
      number: 80
      protocol: HTTP
