istio/virtualservice-testing.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: colors
spec:
  gateways:
  - colors
  hosts:
  - colors.demo4591.codefresh.io
  http:
  - route:
    - destination:
        host: colors-color
        port:
          number: 80
      weight: 20
    - destination:
        host: donating-pug-color
        port:
          number: 80
      weight: 80
